css/style.css
* {
    margin: 0 ; 
    padding: 0 ;
    box-sizing: border-box ; 
}
body {
    font-family: Raleway;
    color: black;
}
.pink {
    background: pink;
}
.clearfix{
    clear: both
}
#particles-js{
    width: 100%;
    height: 100%;
    background-color: #ffffff;
    background-size: cover;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    position: fixed;
    top: 0;
    left: 0;
   
  }
  
header .logo {
    width: 108px;
    float: left;
}
header {
    margin-top: 32px;
}
.top-links {
    padding-top: 25px;
    float: right;
}
.top-links a {
    text-decoration: none ; 
    color: black;
    margin-left: 63px;
    font-size: 14px;
    font-weight: 400;
}
.top-links a:hover{
    color: #1ec8ca;
    transition: 0.2s;
}
.first-description {
    margin-top: 80px;
  
}
.full-description {
    margin-top: 13px;
    font-size: 18px; 
    font-weight: 300i;
    font-style: italic;
    text-align: right
}

.tiny-description h2{
    font-size: 48px ;
    font-weight: 800;
    line-height: 45px; 
    margin-bottom: 54px; 
}

.tiny-description hr {
    width: 133px; 
    height: 5px;
    background: #1ec8ca;
    border: none; 
    display: block;
    margin-bottom: 8px;
    
}

.tiny-description .hire-me a{
    text-decoration: none;
    width: 147px;
    height: 37px;
    border: 2px solid #1ec8ca;
    text-transform: uppercase;
    color: #1ec8ca;
    font-size: 12px;
    font-weight: 300;
    padding: 12px 50px;
    margin-bottom: 100px;
    background: #fff;
    transition: 0.2s;
}

.tiny-description .hire-me {
    display: block;
    margin-bottom: 50px;
}

.tiny-description .hire-me a:hover {
    background: #1ec8ac;
    color: white;
    
}


.title {
    font-size: 18px;
    font-weight: 500;
    font-style: italic ; 
}
.under-title {
    margin-top: 3px;
    border: none ; 
    width: 24px ; 
    height: 4px;
    background: #1ec8ca;
}

.card {
    border: 2px solid #1ec8ca;
    height: auto;
    margin-top:44px;
    background: #fff;
    padding-left: 72px;
    display: block;
    overflow: hidden;
}
.card:last-child {
    margin-bottom: 90px;
}

.card .card-title {
    display: block;
    justify-content: center;
    font-weight: 700;
    font-size: 18px;
    margin-top: 26px;
}
.card .card-description {
    display: block;
    justify-content: center;
    font-weight: 300;
    font-size: 14px;
    font-style: italic;
}
.card .title-description-container {
    float: left;
}
.card .card-img{
    width: 197px;
    height: 90px;
    float: right;
    opacity: 0.8;
    background-image: url(../img/dp2.png);
    background-size:cover;
     
}
.card .card-img::after {
    content: '>';
    display: block;
    height: 90px;
    width: 197px;
    background: #1ec8ac54 ;
    transform: translateY(-94px);
    transition: 0.3s;
    text-align: center;
    line-height: 94px;
    color: black;
    font-size: 28px;
}

.card-img:hover::after {
    transform: translateY(0px);
}

.contact-banner {
    height: 50px;
    background: #1ec8ac;
    margin-top: 90px;
    margin-bottom: 100px;
}
.contact-banner p {
    color: white;
    font-size: 14px;
    font-style: italic;
    font-weight: 300;
    text-align: center;
    line-height: 50px;
}

